--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.3"
+    "babel-loader": "^8.2.3",
+    "mini-css-extract-plugin": "^2.6.0"
   }
 }
